# quickstarts

agents_examples/agent_skills/: .gitignore
agents_examples/agent_skills/dispute-fighter/: README.md  SKILL.md  config.example.json  config.example.yaml
agents_examples/agent_skills/dispute-fighter/assets/: evidence_package_template.md
agents_examples/agent_skills/dispute-fighter/evals/: evals.json
agents_examples/agent_skills/dispute-fighter/evals/fixtures/: dp_duplicate.json  dp_fraud_ce3.json  dp_pnr_orderdata_gift.json  dp_pnr_winnable.json  (+1 more)
agents_examples/agent_skills/dispute-fighter/references/: airbyte-data-access.md  configuration.md  evaluation.md
agents_examples/agent_skills/dispute-fighter/scripts/: build_evidence_package.py  config.py  configure.py  daily_dispute_digest.py  evaluation_summary.py  fetch_dispute_context.py  package_self.py  save_package.py  storage.py
agents_examples/agent_skills/dispute_fighter/: README.md  SKILL.md  config.example.json  config.example.yaml
agents_examples/agent_skills/dispute_fighter/evals/: evals.json
agents_examples/agent_skills/dispute_fighter/references/: configuration.md  evaluation.md  stripe-disputes.md
agents_examples/agent_skills/dispute_fighter/scripts/: config.py  configure.py  daily_dispute_digest.py  evaluation_summary.py  fetch_dispute_context.py  package_self.py  review_outcomes.py  slack_format.py
agents_examples/claude_agent_sdk/: README.md  airbyte-claude-agent-sdk-example.py
agents_examples/langchain_slack_agent/: .env.example  README.md  agent.py  main.py  pyproject.toml
(+1 files in other folders)
