[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "airbyte-agent-sdk>=0.1.233",
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
]
